--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,5 +49,6 @@
         "__config": "cpp",
         "iomanip": "cpp",
         "sstream": "cpp"
-    }
+    },
+    "editor.formatOnSave": false
 }
